# gofile-downloader-with-proxy

./: .gitignore  README.md  gofile_dl.py  pyproject.toml
.github/workflows/: publish.yml
gofile_dl/: __init__.py  __main__.py  cli.py
