[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gofile-dl"
version = "1.0.0"
description = "Simple CLI tool to download files from GoFile with proxy support"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Lysagxra"},
]
keywords = ["gofile", "downloader", "cli", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
gofile-dl = "gofile_dl.cli:main"

[project.urls]
Homepage = "https://github.com/Lysagxra/GoFileDownloader"
Repository = "https://github.com/Lysagxra/GoFileDownloader"

[tool.setuptools.packages.find]
include = ["gofile_dl*"]
